--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
   <img src="https://photos.app.goo.gl/UppgqffjK7XFrheS8" alt="Game Cover" />
   <img src="https://photos.app.goo.gl/HX9P6WGJgiC3ooeR9" alt="Game Cover" />
   
+<p>Check out the website collaboration with Mr. Rainbow Productions <a href="https://jjjhnri.github.io/spoof-game-covers/">here</a>.</p>
+  
 </body>
 </html>
